    - Lowered the cost of Assembler 3's.
    - Rebalanced module tiers 1-2 technology cost to be closer in line with tier 3's.
    - Revamped shotguns slightly to make them more useful and predictable?
    - Buffed Chromium based stainless steel to give 6 plates instead of 5.
    - Changed stainless steel processings technology icon to follow the same theme as steel processing.

  Fixes:
    - Fixed some wood-related recipes not being in the same place.
    - Fixed sulfur not being in the correct place.
    - Made some attempts to curb the file size, but idk chief im gonna have to split these into graphic mods soon
    - Changed solar panel equipment 2 into solar panel equipment MK2.
    - Fixed some leeching icons having wrong stuff in it in my crusade to make this mod smaller.
    - Fixed some locale issues.
    - (#3) Fixed processing integrated circuit molding giving advanced integrated circuits.
    - Fixed a lot of minor locale issues, like capatalisation and random bs like that.
    - Fixed the burn-inator being unlocked twice.
    - Fixed the stainless steel tank not actually taking.. stainless steel.
    - Fixed mining productivity and research speed not being unlocked by their respective tech trees.
    - Fixed rubidium's ratios being fucked in comparison to the amount needed in science.
    - FINALLY MADE ACID PLANTS LOOK DIFFERENT OH MY GOD
    - Fixed the vanadium modular battery technologies not having the correct color.
    - Fixed the vanadium modular batteries MK2's recipe.
    - Moved calcium chloride into the calcium subgroup.
    - Fixed mining productivity 2 having R-NM packs as a prerequisite.
    - Fixing mining productivty 1 not taking A-ATM packs.
    - "Fixed" the Circuit Megassembler needing a seperate recipe for circuits.
    - Fixed Laser damage and speed's science pack requirements.
    - Fixed braking force 1 having R-NM packs as a prerequisite.
    - Made R-NM locked researches match closer to the costs of P-TM researches.